--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <header style="text-align: center;">
     <h1>Penguins</h1>
   </header>
+  <div id="list">
+    <ul>
+      <li>Small (sometimes)</li>
+      <li>Black and White (most of the time)</li>
+      <li>Accustomed to cold climates</li>
+    </ul>
+  </div>
 </body>
 
 </html>
