--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li>Accustomed to cold climates</li>
     </ul>
   </div>
-  <img src="penguin.jpg" alt="penguin">
+  <img style="width: 200px; height: 300px;" src="penguin.jpg" alt="penguin">
 </body>
 
 </html>
